kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tornado-object-storage
  namespace: object-storage
spec:
  selector:
    app: tornado-object-storage
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
