kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tornado-object-storage
  namespace: object-storage
spec:
  rules:
    - host: tornado-object-storage.microk8s.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tornado-object-storage
                port:
                  number: 8888
